Update index.html question to question.js

--- a/index.html
+++ b/index.html
@@ -940,7 +940,7 @@ async function callSecureAPI(question, imageFile) {
         requestBody.imageType = imageFile.type;
     }
 
-    const response = await fetch('/api/question', {
+    const response = await fetch('/api/question.js', {
         method: 'POST',
         headers: {
             'Content-Type': 'application/json',
@@ -1164,4 +1164,5 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
