Update index.html logo

--- a/index.html
+++ b/index.html
@@ -667,7 +667,7 @@
     <header>
         <nav class="container">
             <a href="#" class="logo">
-                🦛 HomeworkHippo
+                ⚡ HomeworkHippo ⚡
             </a>
             <div class="nav-links">
                 <a href="#features">Features</a>
@@ -1164,5 +1164,6 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
