--- a/index.html
+++ b/index.html
@@ -702,7 +702,7 @@
                     <div class="stat-label">Trial days remaining</div>
                 </div>
                 <div class="stat-card">
-                    <div class="stat-number">∞</div>
+                    <div class="stat-number" id="questionsRemaining">∞</div>
                     <div class="stat-label">Questions remaining</div>
                 </div>
             </div>
@@ -1113,6 +1113,7 @@ async function callSecureAPI(question, imageFile) {
             document.getElementById('userName').textContent = currentUser.name;
             updateQuestionCount();
             updateTrialDays();
+            updateQuestionsRemaining();
         }
 
         function updateQuestionCount() {
@@ -1120,6 +1121,7 @@ async function callSecureAPI(question, imageFile) {
             if (element) {
                 element.textContent = questionCount;
             }
+            updateQuestionsRemaining();
         }
 
         function updateTrialDays() {
@@ -1131,6 +1133,18 @@ async function callSecureAPI(question, imageFile) {
                 }
             }
         }
+        
+        function updateQuestionsRemaining() {
+    const element = document.getElementById('questionsRemaining');
+    if (element && currentUser) {
+        if (currentUser.subscribed) {
+            element.textContent = '∞';
+        } else {
+            const remaining = Math.max(0, 3 - questionCount);
+            element.textContent = remaining;
+        }
+    }
+}
 
         function logout() {
             currentUser = null;
@@ -1172,6 +1186,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
