Update index.html 3 trial ?s

--- a/index.html
+++ b/index.html
@@ -896,6 +896,13 @@
                 startSubscription();
                 return;
             }
+            
+            // Check question limit for trial users
+            if (!currentUser.subscribed && questionCount >= 3) {
+                showAlert('You\'ve used all 3 free trial questions! Subscribe now for unlimited access.', 'error');
+                startSubscription();
+                return;
+            }
 
             const responseSection = document.getElementById('responseSection');
             const loadingIndicator = document.getElementById('loadingIndicator');
@@ -1164,5 +1171,6 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
