Update index.html add subscription button

--- a/index.html
+++ b/index.html
@@ -673,7 +673,7 @@
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
                 <button class="btn btn-secondary" onclick="showModal('login')">Sign in</button>
-                <button class="btn btn-primary" onclick="showModal('signup')">Start free trial</button>
+                <button class="btn btn-primary" onclick="showSubscriptionModal()">Subscribe Now</button>
             </div>
         </nav>
     </header>
@@ -1171,6 +1171,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
