--- a/index.html
+++ b/index.html
@@ -1111,7 +1111,7 @@ async function callSecureAPI(question, imageFile) {
                 name: email.split('@')[0],
                 email: email,
                 subscribed: false,
-                trialEnd: new Date(Date.now() + 7 * 24 * 60 * 60 * 1000)
+                trialEnd: new Date(Date.now() + 7 * 24 * 60 * 60 * 1000).toISOString()
             };
             
             localStorage.setItem('homeworkhippo_user', JSON.stringify(currentUser));
@@ -1131,7 +1131,7 @@ async function callSecureAPI(question, imageFile) {
                 name: name,
                 email: email,
                 subscribed: false,
-                trialEnd: new Date(Date.now() + 7 * 24 * 60 * 60 * 1000)
+                trialEnd: new Date(Date.now() + 7 * 24 * 60 * 60 * 1000).toISOString()
             };
             
             localStorage.setItem('homeworkhippo_user', JSON.stringify(currentUser));
@@ -1204,6 +1204,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
