--- a/index.html
+++ b/index.html
@@ -1245,16 +1245,21 @@ async function callSecureAPI(question, imageFile) {
             }
 
             try {
+                        
                 const { error } = await stripe.redirectToCheckout({
-                    lineItems: [{
-                        price: CONFIG.STRIPE_PRICE_ID,
-                        quantity: 1,
-                    }],
-                    mode: 'subscription',
-                    successUrl: window.location.origin + '/success.html',
-                    cancelUrl: window.location.origin + '/#pricing',
-                    customerEmail: currentUser.email,
-                });
+            lineItems: [{
+                price: CONFIG.STRIPE_PRICE_ID,
+                quantity: 1,
+            }],
+            mode: 'subscription',
+            successUrl: window.location.origin + '/success.html',
+            cancelUrl: window.location.origin + '/#pricing',
+            customerEmail: currentUser.email,
+            metadata: {
+                userEmail: currentUser.email,
+                userName: currentUser.name
+            }
+        });
 
                 if (error) {
                     console.error('Stripe error:', error);
@@ -1519,6 +1524,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
