--- a/index.html
+++ b/index.html
@@ -1507,9 +1507,12 @@ async function callSecureAPI(question, imageFile) {
                     hideModal();
                     showUserDashboard();
                     showAlert('Welcome to HomeworkHippo! Your 7-day free trial has started.', 'success');
+                       
                 } else {
-                    showAlert('Signup failed. Please try again.', 'error');
-                }
+          console.error('Signup failed:', data);
+          showAlert(`Signup failed: ${JSON.stringify(data.details || data.error)}`, 'error');
+        }
+                    
             } catch (error) {
                 console.error('Signup error:', error);
                 showAlert('Signup failed. Please try again.', 'error');
@@ -1587,6 +1590,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
