--- a/index.html
+++ b/index.html
@@ -1241,10 +1241,11 @@ async function callSecureAPI(question, imageFile) {
 
         // Check if user is in trial period
         function isInTrial() {
-            if (!currentUser || !currentUser.trialEnd) return false;
-            return new Date() < new Date(currentUser.trialEnd);
-        }
-
+        if (!currentUser) return false;
+        // Use trial_end (with underscore) from database
+        if (!currentUser.trial_end) return true; // If no trial end, assume in trial
+        return new Date() < new Date(currentUser.trial_end);
+    }
         // Start subscription process
         async function startSubscription() {
             if (!currentUser) {
@@ -1590,6 +1591,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
