--- a/index.html
+++ b/index.html
@@ -1541,7 +1541,7 @@ async function callSecureAPI(question, imageFile) {
             hideCancelStep3();
             location.reload();
         } else {
-            alert('Failed to cancel subscription. Please contact support.');
+            alert('No active subscription found or already cancelled.');
         }
     } catch (error) {
         console.error('Cancellation error:', error);
@@ -1620,6 +1620,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
