--- a/index.html
+++ b/index.html
@@ -30,19 +30,21 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         }
 
         :root {
-            --bg-primary: #0A0A0A;
-            --bg-secondary: #1A1A1A;
-            --bg-tertiary: #2A2A2A;
-            --text-primary: #FFFFFF;
-            --text-secondary: #B3B3B3;
-            --text-tertiary: #737373;
-            --accent-orange: #F97316;
-            --accent-orange-hover: #EA580C;
-            --border-primary: #333333;
-            --border-secondary: #404040;
-            --success: #10B981;
-            --error: #EF4444;
-            --warning: #F59E0B;
+            --bg-primary: #FFFFFF;
+            --bg-secondary: #F9FAFB;
+            --bg-tertiary: #F3F4F6;
+            --text-primary: #111827;
+            --text-secondary: #6B7280;
+            --text-tertiary: #9CA3AF;
+            --accent-orange: #3B82F6;
+            --accent-orange-hover: #2563EB;
+            --accent-purple: #8B5CF6;
+            --border-primary: #E5E7EB;
+            --border-secondary: #D1D5DB;
+            --shadow-sm: 0 1px 2px 0 rgba(0, 0, 0, 0.05);
+            --shadow-md: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+            --shadow-lg: 0 10px 15px -3px rgba(0, 0, 0, 0.1), 0 4px 6px -2px rgba(0, 0, 0, 0.05);
+            --shadow-xl: 0 20px 25px -5px rgba(0, 0, 0, 0.1), 0 10px 10px -5px rgba(0, 0, 0, 0.04);
         }
 
         body {
@@ -50,6 +52,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             background: var(--bg-primary);
             color: var(--text-primary);
             line-height: 1.6;
+            -webkit-font-smoothing: antialiased;
+            -moz-osx-font-smoothing: grayscale;
         }
 
         .container {
@@ -61,7 +65,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         /* Header */
         header {
             background: rgba(10, 10, 10, 0.8);
-            backdrop-filter: blur(12px);
+            backdrop-filter: blur(20px);
             border-bottom: 1px solid var(--border-primary);
             padding: 16px 0;
             position: sticky;
@@ -128,24 +132,28 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             background: var(--accent-orange);
             color: white;
             border: 1px solid var(--accent-orange);
+            box-shadow: var(--shadow-sm);
         }
 
         .btn-primary:hover {
             background: var(--accent-orange-hover);
             border-color: var(--accent-orange-hover);
+            box-shadow: var(--shadow-md);
+            transform: translateY(-1px);
         }
 
         /* Hero Section */
         .hero {
             text-align: center;
             padding: 80px 0 120px;
+            background: linear-gradient(to bottom, var(--bg-primary), var(--bg-secondary));
         }
 
         .hero h1 {
             font-size: 56px;
             font-weight: 700;
             margin-bottom: 24px;
-            background: linear-gradient(135deg, var(--text-primary) 0%, var(--text-secondary) 100%);
+            background: linear-gradient(135deg, var(--accent-orange) 0%, var(--accent-purple) 100%);
             -webkit-background-clip: text;
             -webkit-text-fill-color: transparent;
             background-clip: text;
@@ -170,9 +178,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         .app-section {
             background: var(--bg-secondary);
             border: 1px solid var(--border-primary);
+            box-shadow: var(--shadow-xl);
             border-radius: 16px;
-            margin: 40px auto;
+            margin: -40px auto 60px;;
             padding: 32px;
+            position: relative;
             max-width: 800px;
         }
 
@@ -205,6 +215,8 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         #questionInput:focus {
             outline: none;
             border-color: var(--accent-orange);
+            box-shadow: 0 0 0 4px rgba(59, 130, 246, 0.1);
+            background: var(--bg-primary);
         }
 
         #questionInput::placeholder {
@@ -241,7 +253,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         .submit-btn {
             width: 100%;
-            background: var(--accent-orange);
+            background: linear-gradient(135deg, var(--accent-orange), var(--accent-orange-hover));
             color: white;
             padding: 16px;
             border: none;
@@ -250,10 +262,13 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             font-weight: 500;
             cursor: pointer;
             transition: all 0.2s ease;
+            box-shadow: var(--shadow-md);
         }
 
         .submit-btn:hover:not(:disabled) {
             background: var(--accent-orange-hover);
+            transform: translateY(-2px);
+            box-shadow: var(--shadow-lg);
         }
 
         .submit-btn:disabled {
@@ -317,6 +332,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         /* Features Section */
         .features {
             padding: 80px 0;
+            background: var(--bg-secondary);
         }
 
         .features h2 {
@@ -340,11 +356,31 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             border-radius: 16px;
             text-align: center;
             transition: transform 0.2s ease, border-color 0.2s ease;
+            position: relative;
+            overflow: hidden;
         }
 
+        .feature-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            height: 3px;
+            background: linear-gradient(90deg, var(--accent-orange), var(--accent-purple));
+            transform: translateX(-100%);
+            transition: transform 0.3s ease;
+        }
+            
+        .feature-card:hover::before {
+            transform: translateX(0);
+        }
+       
         .feature-card:hover {
             transform: translateY(-4px);
             border-color: var(--border-secondary);
+            box-shadow: var(--shadow-lg);
+            border-color: transparent;
         }
 
         .feature-icon {
@@ -389,6 +425,23 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             max-width: 400px;
             margin: 0 auto;
             text-align: center;
+            box-shadow: var(--shadow-lg);
+            position: relative;
+            overflow: hidden;
+        }
+
+        .pricing-card::before {
+            content: 'BEST VALUE';
+            position: absolute;
+            top: 20px;
+            right: -30px;
+            background: var(--accent-purple);
+            color: white;
+            padding: 4px 40px;
+            font-size: 11px;
+            font-weight: 600;
+            letter-spacing: 0.05em;
+            transform: rotate(45deg);
         }
 
         .pricing-card h3 {
@@ -445,7 +498,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0, 0, 0, 0.8);
+            background: rgba(0, 0, 0, 0.5);
             z-index: 1000;
             backdrop-filter: blur(8px);
         }
@@ -464,6 +517,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             max-width: 400px;
             width: 90%;
             position: relative;
+            box-shadow: var(--shadow-xl);
         }
 
         .modal-close {
@@ -555,6 +609,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
             padding: 32px;
             max-width: 800px;
             display: none;
+            box-shadow: var(--shadow-lg);
         }
 
         .user-dashboard.show {
@@ -593,7 +648,10 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
         .stat-number {
             font-size: 32px;
             font-weight: 700;
-            color: var(--accent-orange);
+            background: linear-gradient(135deg, var(--accent-orange), var(--accent-purple));
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
             margin-bottom: 8px;
         }
 
@@ -1631,6 +1689,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
