Update index.html header change

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 
         /* Header */
         header {
-            background: rgba(10, 10, 10, 0.8);
-            backdrop-filter: blur(20px);
+            background: var(--bg-primary);
             border-bottom: 1px solid var(--border-primary);
+            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.05);
             padding: 16px 0;
             position: sticky;
             top: 0;
@@ -1689,6 +1689,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
