Update index.html update try it now button link

--- a/index.html
+++ b/index.html
@@ -832,7 +832,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <section class="hero">
             <h1>AI-powered science homework help</h1>
             <p>Get step-by-step solutions and detailed explanations for your chemistry, physics, and biology questions using advanced AI.</p>
-            <a href="#app" class="btn btn-primary">Try it now</a>
+            <a href="#" class="btn btn-primary" onclick="showModal('signup'); return false;">Try it now</a>
         </section>
 
         <!-- User Dashboard -->
@@ -1689,6 +1689,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
