Update index.html fix emoji in logo

--- a/index.html
+++ b/index.html
@@ -815,9 +815,15 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
     <header>
         <nav class="container">
-            <a href="#" class="logo">
-                ⚡ HomeworkHippo ⚡
-            </a>
+           <a href="#" class="logo">
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--accent-orange)" style="display: inline-block; vertical-align: middle;">
+        <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
+    </svg>
+    HomeworkHippo
+    <svg width="20" height="20" viewBox="0 0 24 24" fill="var(--accent-orange)" style="display: inline-block; vertical-align: middle;">
+        <path d="M13 2L3 14h9l-1 8 10-12h-9l1-8z"/>
+    </svg>
+</a>
             <div class="nav-links">
                 <a href="#features">Features</a>
                 <a href="#pricing">Pricing</a>
@@ -1728,6 +1734,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
