Update index.html cancel buttons

--- a/index.html
+++ b/index.html
@@ -1145,7 +1145,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                 </p>
                 <div style="display: flex; gap: 1rem; justify-content: center;">
                     <button class="btn btn-secondary" onclick="hideCancelStep1()">Keep My Subscription</button>
-                    <button class="btn" onclick="showCancelStep2()" style="background: var(--error); color: white; border: 1px solid var(--error); padding: 10px 20px;">Continue Canceling</button>
+                    <button class="btn btn-secondary" onclick="showCancelStep2()">Continue Canceling</button>
                 </div>
             </div>
         </div>
@@ -1791,6 +1791,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
