Update index.html cancel flow final

--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     Are you sure you want to cancel your HomeworkHippo subscription? You'll lose access to unlimited science help and step-by-step solutions.
                 </p>
                 <div style="display: flex; gap: 1rem; justify-content: center;">
-                    <button class="btn btn-secondary" onclick="hideCancelStep1()">Keep My Subscription</button>
+                    <button class="btn btn-primary" onclick="hideCancelStep1()">Keep My Subscription</button>
                     <button class="btn btn-secondary" onclick="showCancelStep2()">Continue Canceling</button>
                 </div>
             </div>
@@ -1199,8 +1199,8 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
                     Your subscription will end on <strong>September 5, 2024</strong>. You'll keep access until then.
                 </p>
                 <div style="display: flex; gap: 1rem; justify-content: center;">
-                    <button class="btn btn-secondary" onclick="hideCancelStep3()">Keep Subscription</button>
-                    <button class="btn" onclick="confirmCancellation()" style="background: var(--error); color: white;">Cancel Subscription</button>
+                    <button class="btn btn-primary" onclick="hideCancelStep3()">Keep Subscription</button>
+                    <button class="btn btn-secondary" onclick="confirmCancellation()">Cancel Subscription</button>
                 </div>
             </div>
         </div>
@@ -1791,6 +1791,7 @@ async function callSecureAPI(question, imageFile) {
 </body>
 
 </html>
+
 
 
 
